<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
              android:orientation="horizontal"

    >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            >
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/video_imageView" />
        </LinearLayout>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_weight="1"
           android:orientation="vertical"
           android:layout_height="60dp"
           >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="30dp"
                   android:id="@+id/video_title"
                   android:text="@string/music_title"
                   />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="30dp"
                   android:id="@+id/video_singer"
                   android:text="@string/music_singer"
                    />
       </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/video_size"
                    android:text="@string/music_size"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/video_duration"
                    android:text="@string/music_duration"
                    android:layout_marginRight="10dp"
                     />
        </LinearLayout>



</LinearLayout>
