<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#7891B6" >

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="46dip"
        android:paddingLeft="20dip"
        android:background="#005172"
        android:paddingRight="20dip"
        android:layout_alignParentTop="true"
         >

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/verify_gesture_code"
            android:textSize="20sp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:text="取消"
            android:visibility="gone"
            android:textSize="18sp"
            android:textColor="@color/gesture_cancel_text_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/gesture_tip_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_layout"
        android:orientation="vertical"
        android:paddingTop="20dip" >

        <ImageView
            android:id="@+id/user_logo"
            android:visibility="gone"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/user_logo" />

        <TextView
            android:id="@+id/text_phone_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center_horizontal"
            android:text="152****8888"
            android:visibility="gone"

            android:textColor="#8C806F" />

        <TextView
            android:id="@+id/text_tip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center_horizontal"
            android:textColor="#000000"
             />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/gesture_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gesture_tip_layout" >
    </FrameLayout>
    <ImageView
        android:id="@+id/iv_imgage"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_below="@id/gesture_tip_layout"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:id="@+id/ll"
        android:layout_marginTop="10dp"
        android:layout_below="@id/gesture_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_forget_gesture"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/forget_gesture_code"
            android:textColor="#E7E7E6" />

        <TextView
            android:id="@+id/text_other_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="16sp"
            android:text="@string/use_other_account_login"
            android:textColor="#E7E7E6" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_usemima"
        android:gravity="center"
        android:visibility="gone"
        android:layout_below="@id/ll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:textColor="#816E6A"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:text="@string/use_mima"/>
        <TextView
            android:id="@+id/tv_usefinger"
            android:gravity="center"

            android:layout_below="@id/ll"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:textColor="#816E6A"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            android:text="@string/ues_finger"/>


</RelativeLayout>