<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#2F000000">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="10dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/txt"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_below="@id/btn_choose"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:id="@+id/ll_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_music"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/menu_text_size"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/menu_milk_text"
            android:textColor="@color/menu_text_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_sports"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/menu_text_size"
            android:textColor="@color/menu_text_color"
            android:text="@string/menu_basketball_text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_study"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/menu_book_text"
            android:textColor="@color/menu_text_color"
            android:textSize="@dimen/menu_text_size"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll_games"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_play1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/menu_text_color"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/menu_text_size"
            android:text="@string/menu_mouse_text"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_group_movie"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/menu_text_size"
            android:textColor="@color/menu_text_color"
            android:text="@string/menu_game_movie"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_bpic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_bview"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/menu_text_color"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/menu_text_size"
            android:text="@string/menu_rocket_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_setting"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/menu_text_size"
            android:textColor="@color/menu_text_color"
            android:text="@string/menu_game_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_choose"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="倒计时"
            />

    </LinearLayout>
    </LinearLayout>
    <com.example.hp0331.asta.waterhelper.WaterScreenView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/water_scene_background"/>

</LinearLayout>